[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
clap = { version = "4.4.16", features = ["derive"] }
color-eyre = "0.6.2"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.56"
